# etap-study-automation-agent

./: .env.example  .gitignore  ARCFLASH_REFERENCE_ADOPTION_PLAN.md  MVP_MULTI_AGENT_PLAN.md  PHASE0_STATUS.md  README.md  pyproject.toml
config/: study_plan.json
scripts/: run_live_mvp.py
src/etap_automation/: __init__.py  models.py  paths.py  persistence.py  settings.py
src/etap_study_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/h_operator/: __init__.py  adapter.py  checkpoints.py  contracts.py  fake_client.py  prompts.py
src/orchestrator/: __init__.py  checkpoints.py  engine.py  state.py  status.py
src/reporting/: __init__.py  generator.py  model.py  validation.py
tests/: test_foundation.py  test_live_resource_fix.py  test_orchestrator_wave_f.py  test_orchestrator_wave_h.py  test_phase0_verification.py  test_reporting_wave_i.py  test_wave_d_foundation.py  test_wave_j_e2e.py  test_waves_abd.py  test_waves_ceh.py
