[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "etap-study-automation"
version = "0.1.0"
description = "Fixed-sequence ETAP study automation MVP"
requires-python = ">=3.11"
dependencies = [
  "hai-agents[desktop]==1.0.6",
  "reportlab>=4.4,<5",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pypdf>=5,<7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
